 *
 * CHANGELOG.txt
 * @since  1.6.13
 */
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2021-06-26 [B] Remove unnecessary, server objectionable parameters from batch upload iframe url (thread ID 80407) {ron4mac}
2021-04-22 [M] Upgraded jQuery version to 1.12.4 and included migration script (1.4.1) {ron4mac}
2021-03-21 [A] Added user login authorization hook for plugins {ron4mac}
2021-02-23 [B] Correct javascript Array.find polyfill for conflict issues {ron4mac}
2021-01-22 [M] Various code adjustments made for compatibility with PHP 8(.01) {ron4mac}
2021-01-03 [B] Guard against array_keys failure (PHP8) caused by theme {ron4mac}
2020-10-03 [B] Correct no plugin uninstall action for disabled plugins {ron4mac}
2020-09-07 [M] Release of version 1.6.09 {ron4mac}
2020-07-29 [B] Upload plugin upload_h5a fails to complete queue when uploading one at a time {ron4mac}
2020-05-01 [B] Upload plugin upload_h5a fails to install if DB already has configuration {ron4mac}
2020-04-30 [A] Provide themes with a method to request a body tag class based on current page {ron4mac}
2020-04-28 [M] Cosmetic changes/corrections to admin tools, edit pics and contact {heismauri}
2020-03-27 [B] Failure in include/archive.php due to __construct() changes {ron4mac}
2020-03-23 [B] Use 'dbcharset' parameter when opening bridged database {ron4mac}
2020-02-26 [O,M] Simlify log creation and display {ron4mac}
2020-02-26 [M] Clean up code involved in PHP warnings {ron4mac}
2020-02-25 [M] Remove use of deprecated *magic_quotes* functions {ron4mac}
2020-02-07 [A] Provide themes with a method to use font icons {ron4mac}
2020-02-07 [M] Clean up rating icon in pics edit {ron4mac}